--- a/index.html
+++ b/index.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
 <html lang="de">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Trump 'N' Pump - Power & Performance</title>
     <style>
         body {
             font-family: 'Arial', sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #fff;
+            background: linear-gradient(135deg, #f0f0f0, #e0e0e0); /* Sanfter Farbverlauf */
             color: #000;
+        }
+        .hidden {
+            display: none;
         }
         .top-bar {
             background: #000;
@@ -60,6 +63,7 @@
             text-decoration: none;
             color: #000;
             padding: 10px;
+            cursor: pointer;
         }
         .hero {
             display: flex;
@@ -103,6 +107,11 @@
             font-weight: bold;
             border-radius: 5px;
             text-decoration: none;
+            transition: background-color 0.3s ease, transform 0.3s ease; /* Hinzugefügter Übergang */
+        }
+        .cta:hover {
+            background-color: #4fa3e3;
+            transform: scale(1.05); /* Hover-Effekt */
         }
         .categories {
             display: flex;
@@ -117,6 +126,60 @@
             border-radius: 20px;
             font-size: 14px;
             cursor: pointer;
+            transition: background-color 0.3s ease, transform 0.3s ease;
+        }
+        .categories div:hover {
+            background-color: #60c4ec;
+            transform: scale(1.05);
+        }
+        .products-page {
+            padding: 40px 20px;
+            text-align: center;
+            background-color: #fff;
+            background-size: cover;
+            color: #000;
+        }
+        .products {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            gap: 30px;
+            margin-top: 30px;
+        }
+        .product-card {
+            border: 1px solid #ddd;
+            border-radius: 10px;
+            padding: 20px;
+            width: 250px;
+            background-color: #fff;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Schatten hinzugefügt */
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
+        }
+        .product-card:hover {
+            transform: translateY(-10px);
+            box-shadow: 0 6px 12px rgba(0, 0, 0, 0.15); /* Hover-Effekt für Karten */
+        }
+        .product-card img {
+            width: 100%;
+            border-radius: 10px;
+        }
+        .product-card h2 {
+            margin: 15px 0 10px;
+        }
+        .buy-btn {
+            display: inline-block;
+            margin-top: 15px;
+            padding: 10px 20px;
+            background: #60c4ec;
+            color: #fff;
+            border-radius: 5px;
+            text-decoration: none;
+            font-weight: bold;
+            transition: background-color 0.3s ease, transform 0.3s ease; /* Hover-Effekt für Buttons */
+        }
+        .buy-btn:hover {
+            background-color: #4fa3e3;
+            transform: scale(1.05);
         }
         footer {
             background: #000;
@@ -126,43 +189,93 @@
             margin-top: 40px;
             font-size: 16px;
         }
+
+        section {
+            transition: opacity 0.5s ease-in-out;
+        }
+
+        .hidden {
+            opacity: 0;
+            pointer-events: none;
+        }
+
+        section:not(.hidden) {
+            opacity: 1;
+        }
     </style>
 </head>
 <body>
-    <div class="top-bar">
-        Release Week: Bis zu -55% auf alle Produkte!
-    </div>
+    <div class="top-bar">Release Week: Bis zu -55% auf alle Produkte!</div>
     <header>
-        <img class="logo" src="https://i.imgur.com/52fCSFP.png" alt="Trump 'N' Pump Logo">
+        <img class="logo" src="https://i.imgur.com/52fCSFP.png" alt="Logo" />
         <div class="search-bar">
             <span class="search-bar-icon">🔍</span>
-            <input type="text" placeholder="Suche nach Protein, Nahrung...">
+            <input type="text" placeholder="Suche nach Protein, Nahrung..." />
         </div>
         <nav>
-            <a href="#">Alle Produkte</a>
+            <a onclick="showPage('home')">Startseite</a>
+            <a onclick="showPage('products')">Alle Produkte</a>
             <a href="#">Proteinpulver</a>
             <a href="#">Food & Snacks</a>
             <a href="#">🛒</a>
         </nav>
     </header>
-    <div class="categories">
-        <div>Aktion</div>
-        <div>Alle Produkte</div>
-        <div>Bestseller</div>
-        <div>Protein Pulver</div>
-        <div>Vitalstoffe</div>
-        <div>Performance</div>
-        <div>Food & Snacks</div>
-    </div>
-    <div class="hero">
-        <div class="hero-content">
-            <h1>RELEASE WEEK</h1>
-            <p>Bis zu -55% auf alles und -80% auf Proben!</p>
-            <a href="#" class="cta">Make your own beast</a>
+
+    <!-- Home Page -->
+    <section id="home">
+        <div class="categories">
+            <div>Aktion</div>
+            <div onclick="showPage('products')" style="cursor: pointer;">Alle Produkte</div>
+            <div>Bestseller</div>
+            <div>Protein Pulver</div>
+            <div>Vitalstoffe</div>
+            <div>Performance</div>
+            <div>Food & Snacks</div>
         </div>
-    </div>
-    <footer>
-        © 2025 Trump 'N' Pump | Alle Rechte vorbehalten
-    </footer>
+        <div class="hero">
+            <div class="hero-content">
+                <h1>RELEASE WEEK</h1>
+                <p>Bis zu -55% auf alles und -80% auf Proben!</p>
+                <a href="#" class="cta">Make your own beast</a>
+            </div>
+        </div>
+    </section>
+
+    <!-- Products Page -->
+    <section id="products" class="hidden">
+        <div class="products-page">
+            <h1>Unsere Produkte</h1>
+            <div class="products">
+                <div class="product-card">
+                    <img src="https://i.imgur.com/30Kmzwo.png" alt="Whey Protein Ultra" />
+                    <h2>Whey Protein Ultra</h2>
+                    <p>25g Protein, leckerer Schoko-Geschmack.</p>
+                    <a href="#" class="buy-btn">Jetzt kaufen</a>
+                </div>
+                <div class="product-card">
+                    <img src="https://i.imgur.com/CM0a4oy.png" alt="Protein Bar Max" />
+                    <h2>Protein Bar Max</h2>
+                    <p>20g Eiweiß, wenig Zucker, super Geschmack.</p>
+                    <a href="#" class="buy-btn">Jetzt kaufen</a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <footer>© 2025 Trump 'N' Pump | Alle Rechte vorbehalten</footer>
+
+    <script>
+        function showPage(page) {
+            document.getElementById('home').classList.add('hidden');
+            document.getElementById('products').classList.add('hidden');
+
+            if (page === 'home') {
+                document.getElementById('home').classList.remove('hidden');
+            } else if (page === 'products') {
+                document.getElementById('products').classList.remove('hidden');
+            }
+            window.scrollTo(0,0);
+        }
+    </script>
 </body>
 </html>
