--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             font-family: 'Arial', sans-serif;
             margin: 0;
             padding: 0;
-            background: linear-gradient(135deg, #f0f0f0, #e0e0e0); /* Sanfter Farbverlauf */
+            background-color: #fff;
             color: #000;
         }
         .hidden {
@@ -186,7 +186,7 @@
             color: #fff;
             text-align: center;
             padding: 30px;
-            margin-top: 40px;
+            margin-top: 320px;
             font-size: 16px;
         }
 
@@ -201,6 +201,67 @@
 
         section:not(.hidden) {
             opacity: 1;
+        }
+
+        .ingredients-page {
+            padding: 40px 20px;
+            text-align: center;
+            background-color: #fff;
+            color: #000;
+        }
+
+        .ingredients-card {
+            display: inline-block;
+            background: #f5f5f5;
+            border: 1px solid #ddd;
+            border-radius: 10px;
+            padding: 30px;
+            width: 80%;
+            max-width: 600px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Schatten */
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
+        }
+
+        .ingredients-card:hover {
+            transform: translateY(-10px);
+            box-shadow: 0 6px 12px rgba(0, 0, 0, 0.15); /* Hover-Effekt für den Kasten */
+        }
+
+        .ingredients-list {
+            margin-top: 20px;
+            text-align: left;
+            font-size: 16px;
+        }
+
+        .ingredients-list ul {
+            list-style-type: none;
+            padding: 0;
+        }
+
+        .ingredients-list li {
+            margin-bottom: 10px;
+            font-size: 18px;
+        }
+
+        .ingredients-list li strong {
+            color: #60c4ec;
+        }
+
+        .cta-back {
+            display: inline-block;
+            margin-top: 20px;
+            padding: 15px 30px;
+            background: #60c4ec;
+            color: #fff;
+            font-size: 18px;
+            font-weight: bold;
+            border-radius: 5px;
+            text-decoration: none;
+            transition: background-color 0.3s ease, transform 0.3s ease; /* Hover-Effekt */
+        }
+        .cta-back:hover {
+            background-color: #4fa3e3;
+            transform: scale(1.05);
         }
     </style>
 </head>
@@ -224,7 +285,7 @@
     <!-- Home Page -->
     <section id="home">
         <div class="categories">
-            <div>Aktion</div>
+            <div onclick="showPage('ingredients')" style="cursor: pointer;">Inhaltsstoffe</div>
             <div onclick="showPage('products')" style="cursor: pointer;">Alle Produkte</div>
             <div>Bestseller</div>
             <div>Protein Pulver</div>
@@ -236,7 +297,6 @@
             <div class="hero-content">
                 <h1>RELEASE WEEK</h1>
                 <p>Bis zu -55% auf alles und -80% auf Proben!</p>
-                <a href="#" class="cta">Make your own beast</a>
             </div>
         </div>
     </section>
@@ -262,19 +322,44 @@
         </div>
     </section>
 
+    <!-- Ingredients Page -->
+    <section id="ingredients" class="hidden">
+        <div class="ingredients-page">
+            <h1>Inhaltsstoffe von Whey Protein Ultra</h1>
+            <div class="ingredients-card">
+                <div class="ingredients-list">
+                    <ul>
+                        <li><strong>Proteingehalt:</strong> 25g pro Portion</li>
+                        <li><strong>Kohlenhydrate:</strong> 3g pro Portion</li>
+                        <li><strong>Fette:</strong> 1g pro Portion</li>
+                        <li><strong>Vitamine:</strong> Vitamin B12, Vitamin D</li>
+                        <li><strong>Aromen:</strong> Schokoladengeschmack</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <footer>© 2025 Trump 'N' Pump | Alle Rechte vorbehalten</footer>
 
     <script>
         function showPage(page) {
+            // Verstecke alle Seiten
             document.getElementById('home').classList.add('hidden');
             document.getElementById('products').classList.add('hidden');
+            document.getElementById('ingredients').classList.add('hidden');
 
+            // Zeige die ausgewählte Seite
             if (page === 'home') {
                 document.getElementById('home').classList.remove('hidden');
             } else if (page === 'products') {
                 document.getElementById('products').classList.remove('hidden');
+            } else if (page === 'ingredients') {
+                document.getElementById('ingredients').classList.remove('hidden');
             }
-            window.scrollTo(0,0);
+
+            // Scrollen zurück nach oben
+            window.scrollTo(0, 0);
         }
     </script>
 </body>
